--- a/eTools Ultimate/Views/Pages/SettingsPage.xaml
+++ b/eTools Ultimate/Views/Pages/SettingsPage.xaml
@@ -29,8 +29,12 @@
                 <!-- Resources Tab -->
                 <TabItem Header="Resource Path" HorizontalAlignment="Center">
                     <StackPanel>
+
+                         <!-- General Section -->
+                        <ui:TextBlock Text="General" FontWeight="Bold" FontSize="16" Margin="0,10,0,0"/>
+                        
                         <!-- Grid mit 2x4 Layout für die Einstellungen -->
-                        <Grid Margin="0,30,0,12">
+                        <Grid Margin="0,20,0,12">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*"/>
                                 <ColumnDefinition Width="*"/>
@@ -66,20 +70,8 @@
                                 <Button Grid.Column="2" Width="60" Content="Select" Command="{Binding SelectPropFileCommand}"/>
                             </Grid>
 
-                            <!-- Zeile 1, Spalte 0: Text file -->
+                            <!-- Zeile 1, Spalte 0: Icons folder -->
                             <Grid Grid.Row="1" Grid.Column="0" Margin="0,0,10,10">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="120"/>
-                                    <ColumnDefinition Width="*"/>
-                                    <ColumnDefinition Width="Auto"/>
-                                </Grid.ColumnDefinitions>
-                                <TextBlock Grid.Column="0" VerticalAlignment="Center" Text="Text file" Margin="0,0,8,0"/>
-                                <TextBox Grid.Column="1" Text="{Binding TextFileName, Mode=TwoWay}" Margin="0,0,8,0"/>
-                                <Button Grid.Column="2" Width="60" Content="Select" Command="{Binding SelectTextFileCommand}"/>
-                            </Grid>
-
-                            <!-- Zeile 1, Spalte 1: Icons folder -->
-                            <Grid Grid.Row="1" Grid.Column="1" Margin="10,0,0,10">
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="120"/>
                                     <ColumnDefinition Width="*"/>
@@ -88,7 +80,18 @@
                                 <TextBlock Grid.Column="0" VerticalAlignment="Center" Text="Icons folder" Margin="0,0,8,0"/>
                                 <TextBox Grid.Column="1" Text="{Binding Settings.IconsFolderPath, Mode=OneTime}" Margin="0,0,8,0"/>
                                 <Button Grid.Column="2" Width="60" Content="Select" Command="{Binding SelectIconsFolderCommand}"/>
+                            </Grid>
 
+                            <!-- Zeile 1, Spalte 1: Text file -->
+                            <Grid Grid.Row="1" Grid.Column="1" Margin="10,0,0,10">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="120"/>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="Auto"/>
+                                </Grid.ColumnDefinitions>
+                                <TextBlock Grid.Column="0" VerticalAlignment="Center" Text="Text file" Margin="0,0,8,0"/>
+                                <TextBox Grid.Column="1" Text="{Binding TextFileName, Mode=TwoWay}" Margin="0,0,8,0"/>
+                                <Button Grid.Column="2" Width="60" Content="Select" Command="{Binding SelectTextFileCommand}"/>
                             </Grid>
 
                             <!-- Zeile 2, Spalte 0: Texture folder -->
