--- a/eTools Ultimate/Views/Windows/SplashScreen.xaml
+++ b/eTools Ultimate/Views/Windows/SplashScreen.xaml
@@ -1,4 +1,4 @@
-<Window x:Class="eToolsUltimate.Views.Windows.SplashScreen"
+<Window x:Class="eTools_Ultimate.Views.Windows.SplashScreen"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="SplashScreen" Height="162" Width="500"
@@ -15,7 +15,7 @@
         </Grid.RowDefinitions>
 
         <StackPanel Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center">
-            <Image Source="/Assets/SplashScreen.png" 
+            <Image Source="/Views/Windows/SplashScreen.png" 
                    Width="400" 
                    Height="100"
                    Stretch="Uniform"/>
