Changes iteam page & about page
Added DataTemplate on Item Page
Added Developer Team on About page.

--- a/eTools Ultimate/Views/Pages/SettingsPage.xaml
+++ b/eTools Ultimate/Views/Pages/SettingsPage.xaml
@@ -187,7 +187,7 @@
                         <ui:TextBlock
                             Appearance="Secondary"
                             Foreground="Gray"
-                            Text="eTools Ultimate"
+                            Text="Learn more about eTools Ultimate"
                             TextWrapping="WrapWithOverflow" />
                     </StackPanel>
                 </Grid>
