--- a/eTools Ultimate/Views/Windows/SplashScreen.xaml
+++ b/eTools Ultimate/Views/Windows/SplashScreen.xaml
@@ -19,7 +19,9 @@
                    Width="400" 
                    Height="100"
                    Stretch="Uniform"/>
-            <TextBlock Text="Loading..." 
+            <TextBlock
+                        x:Name="LoadingText"
+                        Text="Loading..." 
                        HorizontalAlignment="Center"
                        Margin="0,10,0,0"
                        Foreground="White" FontSize="12"/>
